--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "test": "set NODE_ENV=test && mocha"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "sqlite3": "^5.0.0",
     "swagger-jsdoc": "^6.0.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
