--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "set NODE_ENV=prod && node ./src/bin/www",
-    "start-dev": "set NODE_ENV=dev && nodemon ./src/bin/www",
-    "test": "set NODE_ENV=test && mocha"
+    "start": "export NODE_ENV=prod && node ./src/bin/www",
+    "start-dev": "export NODE_ENV=dev && nodemon ./src/bin/www",
+    "test": "export NODE_ENV=test && mocha"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -20,6 +20,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
+    "pm2": "^4.5.4",
     "sqlite3": "^5.0.0",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
