--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "pm2": "^4.5.4",
     "sqlite3": "^5.0.0",
     "swagger-jsdoc": "^6.0.0",
-    "swagger-ui-express": "^4.1.6",
-    "uuid": "^8.3.2"
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
